# ODEopt

./: CMakeLists.txt  ODEopt.cpp  ODEopt.hh  ODEoptVector.cpp  ODEoptVector.hh  main.cpp  util.cpp  util.hh
Linear/: CMakeLists.txt  main.cpp
Linear2/: CMakeLists.txt  main.cpp
Pendel/: CMakeLists.txt  main.cpp
